Some changes to the calcualtion of the computational cost
Mainly making the variables consistent

--- a/Code/Computational_cost.ipynb
+++ b/Code/Computational_cost.ipynb
@@ -13,12 +13,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "nk, nk1, nk2, mk, mk1, pk, pk1 =sp.symbols('n_k n_{k+1} n_{k+2} m_k m_{k+1} p_k p_{k+1}')"
+    "To make the forumlas more compact we intoduce the following shorthand\n",
+    "\n",
+    "$m$: Input dim \n",
+    "\n",
+    "$p$: Output dim\n",
+    "\n",
+    "$d$: State dim\n",
+    "\n",
+    "Without additions this gives the cost for one stage\n",
+    "$$ C_k = d_{k+1}d_k + d_{k+1}m_k+p_kd_k+p_km_k $$\n",
+    "\n",
+    "Including additions we get the costfor one stage\n",
+    "\n",
+    "$$ C_k' = d_{k+1}(2d_k-1) + d_{k+1}(2m_k-1)+p_k(2d_k-1)+p_k(2m_k-1) $$\n",
+    "\n",
+    "The overall cost of the system is the sum of the individual costs"
    ]
   },
   {
@@ -27,11 +40,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_stage = nk1*nk + nk1*mk+pk*nk+pk*mk\n",
-    "cost_stage1 = nk2*nk1 + nk2*mk1+pk1*nk1+pk1*mk1\n",
+    "dk, dk1, dk2, mk, mk1, pk, pk1 =sp.symbols('d_k d_{k+1} d_{k+2} m_k m_{k+1} p_k p_{k+1}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_stage = dk1*dk +dk1*mk +pk*dk +pk*mk\n",
+    "cost_stage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_stage1 = dk2*dk1 + dk2*mk1 +pk1*dk1 +pk1*mk1\n",
     "\n",
     "cost_both = cost_stage+cost_stage1\n",
     "cost_both"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Change the bounds\n",
+    "\n",
+    "move the input by $\\Delta_m$, the output by $\\Delta_p$ and the state by $\\Delta_n$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Delta_m,Delta_p,Delta_d =sp.symbols('Delta_m Delta_p Delta_n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(cost_both-cost_both.subs({dk1:dk1+Delta_d,mk:mk+Delta_m,mk1:mk1-Delta_m,pk:pk+Delta_p,pk1:pk1-Delta_p})).simplify()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets try to get some insights:\n",
+    "\n",
+    "We star with:\n",
+    "\n",
+    "$$ \\displaystyle - \\Delta_{m} \\Delta_{n} - 2 \\Delta_{m} \\Delta_{p} - \\Delta_{m} n_{k+1} + \\Delta_{m} n_{k+2} - \\Delta_{m} p_{k} + \\Delta_{m} p_{k+1} + \\Delta_{n} \\Delta_{p} - \\Delta_{n} m_{k} - \\Delta_{n} n_{k} - \\Delta_{n} n_{k+2} - \\Delta_{n} p_{k+1} - \\Delta_{p} m_{k} + \\Delta_{p} m_{k+1} - \\Delta_{p} n_{k} + \\Delta_{p} n_{k+1} $$\n",
+    "\n",
+    "\n",
+    "First we suppose that all products of $\\Delta$s are close to 0 and can be ignored\n",
+    "\n",
+    "\n",
+    "$$ \\displaystyle  - \\Delta_{m} n_{k+1} + \\Delta_{m} n_{k+2} - \\Delta_{m} p_{k} + \\Delta_{m} p_{k+1}  - \\Delta_{n} m_{k} - \\Delta_{n} n_{k} - \\Delta_{n} n_{k+2} - \\Delta_{n} p_{k+1} - \\Delta_{p} m_{k} + \\Delta_{p} m_{k+1} - \\Delta_{p} n_{k} + \\Delta_{p} n_{k+1} $$\n",
+    "\n",
+    "we can reproup the terms to:\n",
+    "$$\n",
+    "\\Delta_{m} (-n_{k+1} +  n_{k+2} - p_{k} + p_{k+1})\n",
+    "+  \n",
+    "\\Delta_{p}( -m_{k} + m_{k+1} - n_{k} + n_{k+1})\n",
+    "+ \\Delta_{n} (-m_{k} -n_{k} -n_{k+2}) \n",
+    "$$\n",
+    "\n",
+    "If we suppose that the two conseqcutive states are similar in the input and output dims as well as the state dims we have $m_{k} - m_{k+1} \\approx 0$,$p_{k} - p_{k+1} \\approx 0$ and $-n_{k+1} +  n_{k+2} \\approx 0$\n",
+    "\n",
+    "This leves us with the expression\n",
+    "$$\\Delta_{n} (-m_{k} -n_{k} -n_{k+2}) $$\n",
+    "This motivates why an reduction of the state dimention also reduces the cost."
    ]
   },
   {
@@ -69,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.simplify(cost_both.subs({pk:pk+1,pk1:pk1-1,nk1:nk1-1})-cost_both)\n"
+    "sp.simplify(cost_both.subs({pk:pk+1,pk1:pk1-1,dk1:dk1-1})-cost_both)\n"
    ]
   },
   {
@@ -112,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.simplify(cost_both.subs({pk:pk+1,pk1:pk1-1,nk1:nk1+1})-cost_both)\n"
+    "sp.simplify(cost_both.subs({pk:pk+1,pk1:pk1-1,dk1:dk1+1})-cost_both)\n"
    ]
   },
   {
@@ -157,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.simplify(cost_both.subs({mk:mk+1,mk1:mk1-1,nk1:nk1-1})-cost_both)\n"
+    "sp.simplify(cost_both.subs({mk:mk+1,mk1:mk1-1,dk1:dk1-1})-cost_both)\n"
    ]
   },
   {
@@ -202,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sp.simplify(cost_both.subs({mk:mk-1,mk1:mk1+1,nk1:nk1+1})-cost_both)\n"
+    "sp.simplify(cost_both.subs({mk:mk-1,mk1:mk1+1,dk1:dk1+1})-cost_both)\n"
    ]
   },
   {
@@ -224,6 +313,7 @@
    "source": [
     "def transfrom_sum(arg,n,N,n_start=None):\n",
     "    #Take a sum consisting of polynomilas in n and calcualtes the overall polynomial using the Faulhabersche_Formel\n",
+    "    #Knuth https://arxiv.org/abs/math/9207222\n",
     "    #calcaultes $$\\sum^N_{n=1} exp$$  for $$exp = \\sum_{p=0}^5 a_p n^p$$\n",
     "    #Parameters:\n",
     "    #    arg:   expression in the sum\n",
@@ -261,48 +351,76 @@
    "source": [
     "# Approximations of Bounds\n",
     "\n",
-    "$$ m = N/v $$\n",
-    "$$ m = N/v $$\n",
+    "$$ m = M/K $$\n",
+    "$$ m = M/K $$\n",
+    "\n",
+    "To approxiamte the rank we use an approxiamtion based on the shape of the Hankel matrices.\n",
+    "\n",
     "\n",
     "## Shapes of the Hankel matrix\n",
     "\n",
-    "height:\n",
-    "$$ \\nu -\\sum_{k`=1}^{k-1} p_{k`}= N - (k-1)p = (v-k+1)p$$\n",
-    "$$ \\sum_{k`=1}^{k-1} m_{k`} = (k-1)m$$\n",
+    "The height of $H_k$ can be computed accoring to \n",
+    "$$ \\Lambda_k = P -\\sum_{i=1}^{k-1} p_{i}= P - (k-1)p = (K-k+1)p$$\n",
+    "The width of $H_k$ is given by\n",
+    "$$ \\Upsilon_k = \\sum_{i=1}^{i-1} m_{i} = (k-1)m$$\n",
     "\n",
     "## Approximate rank\n",
     "\n",
-    "$$rank(H) \\approx \\gamma \\cdot \\text{height} \\cdot \\text{width}$$\n",
-    "\n",
-    "### Product of height and width:\n",
-    "$$(v-k+1)p(k-1)m$$\n",
+    "At this stage it is not clear how to approximate the number of stages, as this dpends on the distribution of the singular values as well as the required precission.\n",
+    "Therfore I decide to use approxiamtions that can be motivated using properties of the Hankel matrices, but are still easy enough to make it possible to give closed form approxiamtions.\n",
+    "This also means that these approxiamtiosn have hyperparameters that have to be adjusted.\n",
     "\n",
     "### Minimum of height and width (here $p=m$)\n",
-    "$$ \\min((v-k+1)p,(k-1)m) = \\min\\big((v-k+1),(k-1)\\big)m = \\min\\big(v+1-k,k-1\\big)m$$\n",
+    "The first approximation is based on the biggest possible Rank of the $H_k$ this the minimum of the width and height.\n",
+    "For an quadratic natrix we get\n",
+    "$$ \\min((K-k+1)p,(k-1)m) = \\min\\big((v-k+1),(k-1)\\big)m = \\min\\big(v+1-k,k-1\\big)m$$\n",
     "\n",
     "change this \n",
-    "$v+1-k>k-1 \\Leftrightarrow v+1>2k-1 \\Leftrightarrow v+2>2k \\Leftrightarrow v/2+1>k$\n",
+    "$K+1-k>k-1 \\Leftrightarrow K+1>2k-1 \\Leftrightarrow K+2>2k \\Leftrightarrow K/2+1>k$\n",
     "\n",
-    "$$n_k = \\gamma \\min((v-k+1)p,(k-1)m) = \\begin{cases}\n",
-    "    \\gamma (k-1)m &\\text{if } k\\leq v/2+1 \\\\\n",
-    "    \\gamma (v+1-k)m &\\text{if } k > v/2+1 \\\\\n",
-    "\\end{cases}$$\n",
+    "$$d_k = \\gamma \\min((K-k+1)m,(k-1)m) = \\begin{cases}\n",
+    "    \\gamma (k-1)m &\\text{if } k\\leq K/2+1 \\\\\n",
+    "    \\gamma (K+1-k)m &\\text{if } k > K/2+1 \\\\\n",
+    "\\end{cases}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For an nonsquare matrix we get \n",
+    "$$\\min((K-k+1)p,(k-1)m)$$\n",
     "\n",
+    "$$\n",
+    "(K-k+1)p<(k-1)m \\Leftrightarrow\n",
+    "-kp+(K+1)p<km-m \\Leftrightarrow\n",
+    "m+(K+1)p<km+kp \\Leftrightarrow\n",
+    "m+(K+1)p<(m+p)k \\Leftrightarrow\n",
+    "\\frac{m+(K+1)p}{(m+p)} < k\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "d_k = \\gamma \\min((K-k+1)p,(k-1)m) = \\begin{cases}\n",
+    "    \\gamma (k-1)m &\\text{if } k\\leq \\frac{M+(K+1)P}{(M+P)} \\\\\n",
+    "    \\gamma (K+1-k)p &\\text{if } k > \\frac{M+(K+1)P}{(M+P)} \\\\\n",
+    "\\end{cases}\n",
+    "$$\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# numerical test for N=100\n",
-    "ks = np.arange(1,100+1)\n",
-    "n_prod = (100-ks+1)*(ks-1)/100 #m=1 and p=1 as 100/100\n",
-    "n_min = np.min(np.vstack((100-ks+1,ks-1)),axis=0)\n",
-    "plt.plot(ks,n_prod,label=\"prod\")\n",
-    "plt.plot(ks,n_min ,label=\"min\")"
+    "$$rank(H) \\approx \\gamma \\cdot \\text{height} \\cdot \\text{width}$$\n",
+    "\n",
+    "### Product of height and width:\n",
+    "The second approxiamtion is based on the idea that the singular vlaues increase are related to the Frobenius norm by $\\|H\\|_F = \\sqrt{\\sum \\sigma_i^2}$.\n",
+    "As the Frobenius norm increases, this should also result in increasing singular values.\n",
+    "If we consider the elements of $H$ as cosntant, then $\\|H\\|_F \\propto \\text{size(H)}$\n",
+    "\n",
+    "$$(K-k+1)p(k-1)m$$\n"
    ]
   },
   {
@@ -311,9 +429,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v,m,p,Nu = sp.symbols('v m p Nu',positive=True)\n",
-    "nk,nk1 = sp.symbols('n_k n_{k+1}',positive=True)\n",
+    "# numerical test for \n",
+    "def plot_approx(K = 100,M = 500,P = 500):\n",
+    "    ks = np.arange(1,K+1)\n",
+    "    d_prod = (K-ks+1)*(ks-1)*P*M/K**2/max(M,P) #*max(M,P) #The M is for normalization\n",
+    "    d_min = np.min(np.vstack(((K-ks+1)*P/K,(ks-1)*M/K)),axis=0)\n",
+    "\n",
+    "\n",
+    "    plt.plot(ks,d_prod,label=\"prod\")\n",
+    "    plt.plot(ks,d_min ,label=\"min\")\n",
+    "    \n",
+    "plt.figure(figsize=[7,3])\n",
+    "plt.subplot(1,3,1)\n",
+    "plot_approx()\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.subplot(1,3,2)\n",
+    "plot_approx(M=250,P=500)\n",
+    "\n",
+    "plt.subplot(1,3,3)\n",
+    "plot_approx(M=500,P=250)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K,m,p,M,P = sp.symbols('K m p M P',positive=True)\n",
+    "N = sp.symbols('N',positive=True) #for square matrix\n",
+    "dk,dk1 = sp.symbols('d_k d_{k+1}',positive=True)\n",
     "gamma = sp.symbols('gamma',positive=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If one supposes that the state dims for the casual and anticasual system are equivalent, then only the  caclulateion for the casual system is nedded.\n",
+    "All term except the term for the $D$-matrix are doubled.\n",
+    "This resualts in the cost"
    ]
   },
   {
@@ -326,8 +482,8 @@
     "#include D for anticausal part\n",
     "#cost =nk1*nk+nk1*m+p*nk+p*m\n",
     "# only include D once -> divide it by 2\n",
-    "cost =nk1*nk+nk1*m+p*nk+0.5*p*m\n",
-    "cost_sum = sp.Sum(cost,(k,1,v))\n",
+    "cost =dk1*dk+dk1*m+p*dk+0.5*p*m\n",
+    "cost_sum = sp.Sum(cost,(k,1,K))\n",
     "cost_sum"
    ]
   },
@@ -344,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_prod=cost_sum.subs({nk:gamma*(v-k+1)*(k-1)*p*m,nk1:gamma*(v-k+2)*(k)*p*m})\n",
+    "cost_prod=cost_sum.subs({dk:gamma*(K-k+1)*(k-1)*p*m,dk1:gamma*(K-k+2)*(k)*p*m})\n",
     "sp.simplify(cost_prod)"
    ]
   },
@@ -354,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arg_prod = cost.subs({nk:gamma*(v-k+1)*(k-1)*p*m,nk1:gamma*(v-k+2)*(k)*p*m})\n",
+    "arg_prod = cost.subs({dk:gamma*(K-k+1)*(k-1)*p*m,dk1:gamma*(K-k+2)*(k)*p*m})\n",
     "arg_prod"
    ]
   },
@@ -364,7 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_total_prod = transfrom_sum(arg_prod,k,v)\n",
+    "cost_total_prod = transfrom_sum(arg_prod,k,K)\n",
     "cost_total_prod"
    ]
   },
@@ -372,11 +528,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "relation between $m$ and $p$ and $v$\n",
+    "relation between $m$ and $p$ and $K$\n",
     "\n",
     "Here a quadratic matrix:\n",
-    "$$p = N/v$$\n",
-    "$$m = N/v$$"
+    "$$p = N/K$$\n",
+    "$$m = N/K$$"
    ]
   },
   {
@@ -385,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_total_prod=cost_total_prod.subs({p:Nu/v,m:Nu/v}).expand().collect(v)\n",
+    "cost_total_prod=cost_total_prod.subs({p:N/K,m:N/K}).expand().collect(K)\n",
     "cost_total_prod"
    ]
   },
@@ -395,7 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deriv = sp.diff(cost_total_prod,v)\n",
+    "deriv = sp.diff(cost_total_prod,K)\n",
     "deriv"
    ]
   },
@@ -405,7 +561,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#critical_points=sp.solve((deriv*v**4).subs({Nu:100}).expand().collect(v),v)"
+    "#critical_points=sp.solve((deriv*v**4).subs({Nu:100}).expand().collect(K),K)"
    ]
   },
   {
@@ -414,13 +570,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = sp.lambdify([v,(Nu,gamma)],cost_total_prod)\n",
-    "vs = np.linspace(1,1000,500)\n",
-    "for gamma_tilde in np.logspace(-6,-0.5,10):\n",
-    "    costs= f(vs,(500,gamma_tilde*1./100))\n",
-    "    plt.plot(vs,costs,label=\"g=\"+str(gamma_tilde))\n",
+    "f = sp.lambdify([K,(N,gamma)],cost_total_prod)\n",
+    "Ks = 2**np.arange(11)\n",
+    "Nn = Ks[-1]\n",
+    "for gamma_tilde in np.logspace(-5,0,7):\n",
+    "    costs= f(Ks,(1024,gamma_tilde*1./float(Nn)))\n",
+    "    plt.semilogy(np.arange(11),costs,label=\"g=\"+str(gamma_tilde))\n",
     "    \n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_total_prod.subs(K,1)"
    ]
   },
   {
@@ -429,16 +596,16 @@
    "source": [
     "## Now minimum\n",
     "\n",
-    "$$n_k = \\gamma \\min((v-k+1)p,(k-1)m) = \\begin{cases}\n",
-    "    \\gamma (k-1)m &\\text{if } k\\leq v/2+1 \\\\\n",
-    "    \\gamma (v+1-k)m &\\text{if } k > v/2+1 \\\\\n",
+    "$$d_k = \\gamma \\min((K-k+1)p,(k-1)m) = \\begin{cases}\n",
+    "    \\gamma (k-1)m &\\text{if } k\\leq K/2+1 \\\\\n",
+    "    \\gamma (K+1-k)m &\\text{if } k > K/2+1 \\\\\n",
     "\\end{cases}$$\n",
     "\n",
     "This gives \n",
     "\n",
-    "$$\\text{Total Cost} = \\sum_{k=1}^{v/2}\\text{cost}_{k} + \\sum_{k=v/2+1}^{v}\\text{cost}_{k}$$\n",
+    "$$\\text{Total Cost} = \\sum_{k=1}^{K/2}\\text{cost}_{k} + \\sum_{k=K/2+1}^{K}\\text{cost}_{k}$$\n",
     "\n",
-    "For $v/2+1$ we can use either one so we can include $v/2$ in the first sum, at leasst for even $v$"
+    "For $K/2+1$ we can use either one so we can include $K/2$ in the first sum, at leasst for even $v$"
    ]
   },
   {
@@ -448,12 +615,12 @@
    "outputs": [],
    "source": [
     "display(cost)\n",
-    "arg_min1 = cost.subs({nk:gamma*(k-1)*m,nk1:gamma*(k)*m})\n",
-    "arg_min2 = cost.subs({nk:gamma*(v+1-k)*m,nk1:gamma*(v-k)*m})\n",
+    "arg_min1 = cost.subs({dk:gamma*(K-1)*m,dk1:gamma*(k)*m})\n",
+    "arg_min2 = cost.subs({dk:gamma*(K+1-k)*m,dk1:gamma*(K-k)*m})\n",
     "\n",
     "display(arg_min1)\n",
     "\n",
-    "cost_total_min = transfrom_sum(arg_min1,k,v/2)+transfrom_sum(arg_min2,k,v,n_start=v/2+1)\n",
+    "cost_total_min = transfrom_sum(arg_min1,k,K/2)+transfrom_sum(arg_min2,k,K,n_start=K/2+1)\n",
     "cost_total_min"
    ]
   },
@@ -463,7 +630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cost_total_min=cost_total_min.subs({p:Nu/v,m:Nu/v}).expand().collect(v)\n",
+    "cost_total_min=cost_total_min.subs({p:N/K,m:N/K}).expand().collect(K)\n",
     "cost_total_min"
    ]
   },
@@ -473,14 +640,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 100\n",
-    "f = sp.lambdify([v,(Nu,gamma)],cost_total_min)\n",
-    "vs = np.arange(1,N+1)\n",
-    "for gamma_tilde in np.logspace(-2,0,10):\n",
-    "    costs= f(vs,(100,gamma_tilde))\n",
-    "    plt.plot(vs,costs,label=\"g=\"+str(gamma_tilde))\n",
+    "f = sp.lambdify([K,(N,gamma)],cost_total_min)\n",
+    "Ks = 2**np.arange(11)\n",
+    "Nn = Ks[-1]\n",
+    "for gamma_tilde in np.logspace(-5,0,7):\n",
+    "    costs= f(Ks,(1024,gamma_tilde))\n",
+    "    plt.semilogy(np.arange(11),costs,label=\"g=\"+str(gamma_tilde))\n",
     "    \n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "plt.grid()"
    ]
   },
   {
@@ -569,6 +737,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -587,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
